--- a/package.json
+++ b/package.json
@@ -9,13 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@stewed/hooks": "^0.0.4",
-    "@stewed/react": "^0.0.0",
-    "@stewed/tokens": "^0.1.4",
-    "@stewed/utilities": "^0.1.2",
+    "@stewed/hooks": "^0.0.5",
+    "@stewed/react": "^0.0.5",
     "next": "14.1.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
