--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --check --ignore-path .gitignore .",
+    "format:fix": "prettier --write --ignore-path .gitignore ."
   },
   "dependencies": {
     "@stewed/hooks": "^0.0.5",
-    "@stewed/react": "^0.0.5",
+    "@stewed/react": "^0.0.6",
+    "@stewed/utilities": "^0.1.3",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
@@ -22,6 +25,8 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
+    "eslint-config-prettier": "^9.1.0",
+    "prettier": "^3.2.5",
     "typescript": "^5"
   }
 }
