--- a/package.json
+++ b/package.json
@@ -11,22 +11,20 @@
     "format:fix": "prettier --write --ignore-path .gitignore ."
   },
   "dependencies": {
-    "@stewed/hooks": "^0.0.5",
-    "@stewed/react": "^0.0.6",
-    "@stewed/utilities": "^0.1.3",
-    "next": "14.1.4",
+    "@stewed/hooks": "^0.0.6",
+    "@stewed/react": "^0.0.7",
+    "@stewed/utilities": "^0.1.4",
+    "next": "14.2.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.4",
-    "eslint-config-prettier": "^9.1.0",
-    "prettier": "^3.2.5",
+    "@harmonix-hub/eslint": "^1.3.1",
+    "@harmonix-hub/prettier": "^1.3.1",
     "typescript": "^5"
   }
 }
