--- a/package.json
+++ b/package.json
@@ -3,28 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "format": "prettier --check --ignore-path .gitignore .",
-    "format:fix": "prettier --write --ignore-path .gitignore ."
+    "lint": "next lint"
   },
   "dependencies": {
-    "@stewed/hooks": "^0.3.0",
-    "@stewed/react": "^0.3.0",
-    "@stewed/utilities": "^0.3.1",
-    "next": "14.2.5",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-icons": "^5.2.1"
+    "@tanstack/react-query": "^5.62.11",
+    "@stewed/hooks": "^2.0.1",
+    "@stewed/react": "^2.0.1",
+    "next": "15.1.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0"
   },
   "devDependencies": {
+    "@harmonix-hub/prettier": "^1.4.0",
+    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "@harmonix-hub/eslint": "^1.3.5",
-    "@harmonix-hub/prettier": "^1.3.1",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint": "^9",
+    "eslint-config-next": "15.1.3",
     "typescript": "^5"
   }
 }
